[package]
name = "leech"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "leech"
path = "src/bin/main.rs"


[build-dependencies]
clap_mangen = "0.2.24"
clap = {version = "4.5.20", features = ["derive", "color"]}
clap_complete = "4.5.33"
clap_complete_nushell = "4.5.4"
clap_complete_fig = "4.5.2"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
futures = "0.3.31"
num_cpus = "1.16.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
indicatif = "0.17.8"
clap = {version = "4.5.20", features = ["derive"]}
clap_complete = "4.5.33"
clap_complete_nushell = "4.5.4"
clap_complete_fig = "4.5.2"